2015-01-14 JC <jozef@vzaar.com>
	
	* changelog added
