@@ -1,3 +1,3 @@
 module Vzaar
-  VERSION = "1.4.2"
+  VERSION = "1.4.3"
 end
