@@ -1,3 +1,7 @@
+2015-01-21 JC <jozef@vzaar.com>
+
+  * API specs added for edit/delete http verbs
+
 2015-01-14 JC <jozef@vzaar.com>
 	
 	* changelog added
